--- a/codeDevelopDemo/crossOrigin/crossOriginDemo.html
+++ b/codeDevelopDemo/crossOrigin/crossOriginDemo.html
@@ -41,7 +41,7 @@
 
     let ele = document.querySelector('.ajaxButton')
     ele.addEventListener('click', function () {
-        let url = 'http://localhost:2300/helloworld'
+        let url = 'http://localhost:3300/singlecors'
         let method = 'GET'
         let data = {}
         let headers = {
