--- a/codeDevelopDemo/crossOrigin/nodeProxy/index.html
+++ b/codeDevelopDemo/crossOrigin/nodeProxy/index.html
@@ -36,7 +36,7 @@
     const bindEvent = () => {
         let ele = document.querySelector('.ajaxButton')
         ele.addEventListener('click', function () {
-            let url = '/api/todos'
+            let url = '/api/singlecors'
             let method = 'GET'
             let data = ''
             ajax(method, url, data)
