--- a/react/PrismReactDemo/index.html
+++ b/react/PrismReactDemo/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>React demo</title>
 </head>
 <body>
-$END$
+<div id="root"></div>
+<script src="./build/a.js"></script>
 </body>
 </html>
